@@ -23,7 +23,6 @@ package com.apple.foundationdb.record.query.plan.cascades.predicates;
 import com.apple.foundationdb.annotation.API;
 import com.apple.foundationdb.annotation.SpotBugsSuppressWarnings;
 import com.apple.foundationdb.record.EvaluationContext;
-import com.apple.foundationdb.record.PlanHashable;
 import com.apple.foundationdb.record.RecordCoreException;
 import com.apple.foundationdb.record.provider.foundationdb.FDBRecordStoreBase;
 import com.apple.foundationdb.record.query.plan.cascades.AliasMap;
@@ -47,26 +46,52 @@ import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static com.apple.foundationdb.record.query.plan.cascades.predicates.RangeConstraints.EvalResult.FALSE;
-import static com.apple.foundationdb.record.query.plan.cascades.predicates.RangeConstraints.EvalResult.TRUE;
-
 /**
- * A special predicate used to represent a parameterized tuple range.
+ * This class associates a {@link Value} with a set of ranges ({@link RangeConstraints}). Each one of the ranges refers
+ * to a conjunction of:
+ *  - a contiguous compile-time evaluable range.
+ *  - a set of non-compile-time (deferred) ranges.
+ *<br>
+ * The set here represents a disjunction of these ranges. So, in a way, this class represents a boolean expression in
+ * DNF form defined on the associated {@link Value}.
+ *<br>
+ * It is mainly used for index matching, i.e. it is not evaluable at runtime. On the query side it is normally used to
+ * represent a search-argument (sargable). On the candidate side, it is normally used to either represent a restriction
+ * on a specific attribute of a scan.
+ * <br>
+ * If the attribute is indexes, we use the {@link Placeholder} subtype to represent it along with its alias used later
+ * on for substituting one of the index scan search prefix) and an (optional) range(s) defined on it to semantically
+ * represent the filtering nature of the associated index and use it to plan accordingly.
+ * <br>
+ * If the attribute, however, is not indexed, then we use an instance of {@code this} class as a restriction on that
+ * particular attribute.
  */
 @SuppressWarnings("OptionalUsedAsFieldOrParameterType")
 @API(API.Status.EXPERIMENTAL)
 public class ValueWithRanges implements PredicateWithValue {
+
+    /**
+     * The value associated with the {@code ranges}.
+     */
     @Nonnull
     private final Value value;
 
+    /**
+     * A list of ranges, implicitly defining a boolean predicate in DNF form defined on the {@code value}.
+     */
     @Nonnull
     private final Set<RangeConstraints> ranges;
 
+    /**
+     * Creates a new instance of {@link ValueWithRanges}.
+     *
+     * @param value The value.
+     * @param ranges A set of ranges defined on the value (can be empty).
+     */
     protected ValueWithRanges(@Nonnull final Value value, @Nonnull final Set<RangeConstraints> ranges) {
         this.value = value;
         this.ranges = ImmutableSet.copyOf(ranges);
@@ -95,7 +120,7 @@ public class ValueWithRanges implements PredicateWithValue {
     public Set<CorrelationIdentifier> getCorrelatedToWithoutChildren() {
         return Streams.concat(value.getCorrelatedTo().stream(),
                 ranges.stream().flatMap(r -> r.getCorrelatedTo().stream()))
-                .collect(Collectors.toSet());
+                .collect(ImmutableSet.toImmutableSet());
     }
 
     @SuppressWarnings("EqualsWhichDoesntCheckParameterClass")
@@ -105,6 +130,13 @@ public class ValueWithRanges implements PredicateWithValue {
         return semanticEquals(other, AliasMap.identitiesFor(getCorrelatedTo()));
     }
 
+    /**
+     * Performs algebraic equality between {@code this} and {@code other}, if {@code other} is also a {@link ValueWithRanges}.
+     *
+     * @param other The other predicate
+     * @param equivalenceMap The alias equivalence map.
+     * @return {@code true} if both predicates are equal, otherwise {@code false}.
+     */
     @Override
     public boolean equalsWithoutChildren(@Nonnull final QueryPredicate other, @Nonnull final AliasMap equivalenceMap) {
         if (!PredicateWithValue.super.equalsWithoutChildren(other, equivalenceMap)) {
@@ -124,12 +156,12 @@ public class ValueWithRanges implements PredicateWithValue {
 
     @Override
     public int semanticHashCode() {
-        return Objects.hash(value.semanticHashCode());
+        return value.semanticHashCode();
     }
 
     @Override
     public int planHash(@Nonnull final PlanHashKind hashKind) {
-        return PlanHashable.planHash(hashKind, value);
+        throw new RecordCoreException("this method should not ever be reached");
     }
 
     @Nonnull
@@ -144,23 +176,27 @@ public class ValueWithRanges implements PredicateWithValue {
     @Nonnull
     @Override
     public ValueWithRanges translateLeafPredicate(@Nonnull final TranslationMap translationMap) {
-        return new ValueWithRanges(value.translateCorrelations(translationMap), ranges.stream().map(range -> range.translateCorrelations(translationMap)).collect(Collectors.toSet()));
+        return new ValueWithRanges(value.translateCorrelations(translationMap), ranges.stream().map(range -> range.translateCorrelations(translationMap)).collect(ImmutableSet.toImmutableSet()));
     }
 
     private boolean impliedBy(@Nonnull final ValueWithRanges other) {
-        final var leftDisjunction = getRanges();
-        final var rightDisjunction = other.getRanges();
-        for (final var left : leftDisjunction) {
-            if (!left.isCompileTimeEvaluable() || !left.isEmpty().equals(FALSE) || rightDisjunction.stream().noneMatch(right -> right.implies(left).equals(TRUE))) {
+        final var leftRanges = getRanges();
+        final var rightRanges = other.getRanges();
+        for (final var left : leftRanges) {
+            if (!left.isCompileTimeEvaluable() || !(left.isEmpty() == Proposition.FALSE) || rightRanges.stream().noneMatch(right -> right.encloses(left) == Proposition.TRUE)) {
                 return false;
             }
         }
         return true;
     }
 
+    public boolean equalsValueOnly(@Nonnull final QueryPredicate other) {
+        return (other instanceof ValueWithRanges) && value.equals(((ValueWithRanges)other).value);
+    }
+
     @Nonnull
     public static ValueWithRanges sargable(@Nonnull Value value, @Nonnull final RangeConstraints range) {
-        return new ValueWithRanges(value, Set.of(range));
+        return new ValueWithRanges(value, ImmutableSet.of(range));
     }
 
     @Nonnull
@@ -168,6 +204,29 @@ public class ValueWithRanges implements PredicateWithValue {
         return new ValueWithRanges(value, ranges);
     }
 
+    /**
+     * Checks whether this predicate implies a {@code candidatePredicate}, if so, we return a {@link PredicateMapping}
+     * reflecting the implication itself in addition to a context needed to effectively implement the mapping (i.e. the
+     * necessity to apply a residual on top).
+     * <br>
+     * The implication is done by pattern matching the following cases:
+     * <ul>
+     *  <li>If {@code candidatePredicate} is a contradiction, we do not have an implication, so we return an empty
+     *  mapping.</li>
+     *  <li>If {@code candidatePredicate} is a tautology, we always have an implication, so we return a mapping with an application
+     *  of residual on top</li>
+     *  <li>If {@code candidatePredicate} is a {@link ValueWithRanges} and the values on both sides are semantically equal
+     *  to each other and the candidate's domain is unbounded, we have an implication, so
+     *  we return a mapping with a residual application on top depending on whether the candidate's alias can be used in
+     *  the index scan prefix or not.</li>
+     *  <li>If {@code candidatePredicate} is a {@link ValueWithRanges} and the values on both sides are semantically equal
+     *  to each other and the candidate domain is bound, then we check if {@code this} range is enclosed by the candidate's
+     *  range, if so, we have an implication and we proceed to create a mapping similar to the above logic.</li>
+     * </ul>
+     * @param aliasMap the current alias map
+     * @param candidatePredicate another predicate (usually in a match candidate)
+     * @return an optional {@link PredicateMapping} representing the result of the implication.
+     */
     @Nonnull
     @Override
     public Optional<PredicateMapping> impliesCandidatePredicate(@NonNull final AliasMap aliasMap,
@@ -191,7 +250,7 @@ public class ValueWithRanges implements PredicateWithValue {
             // candidate has no ranges (i.e. it is not filtered).
             if (candidate.getRanges().isEmpty()) {
                 if (candidate instanceof WithAlias) {
-                    final var alias = ((WithAlias)candidate).getAlias();
+                    final var alias = ((WithAlias)candidate).getParameterAlias();
                     return Optional.of(new PredicateMapping(this, candidatePredicate, (ignore, boundParameterPrefixMap) -> {
                         if (boundParameterPrefixMap.containsKey(alias)) {
                             return Optional.empty();
@@ -203,10 +262,9 @@ public class ValueWithRanges implements PredicateWithValue {
                 }
             }
 
-            // if this and candidate are compile-time evaluable.
             if (impliedBy(candidate)) {
                 if (candidate instanceof WithAlias) {
-                    final var alias = ((WithAlias)candidate).getAlias();
+                    final var alias = ((WithAlias)candidate).getParameterAlias();
                     return Optional.of(new PredicateMapping(this, candidatePredicate, (ignore, boundParameterPrefixMap) -> {
                         if (boundParameterPrefixMap.containsKey(alias)) {
                             return Optional.empty();
@@ -237,7 +295,7 @@ public class ValueWithRanges implements PredicateWithValue {
         if (semanticEquals(candidatePredicate, aliasMap)) {
             // Note that we never have to reapply the predicate as both sides are always semantically
             // equivalent.
-            return Optional.of(new PredicateMapping(this, candidatePredicate, PredicateMultiMap.CompensatePredicateFunction.EMPTY));
+            return Optional.of(new PredicateMapping(this, candidatePredicate, PredicateMultiMap.CompensatePredicateFunction.noCompensationNeeded()));
         }
 
         return Optional.empty();
@@ -272,10 +330,16 @@ public class ValueWithRanges implements PredicateWithValue {
         final ImmutableList.Builder<QueryPredicate> dnfParts = ImmutableList.builder();
         for (final var range : ranges) {
             final ImmutableList.Builder<QueryPredicate> residuals = ImmutableList.builder();
-            residuals.addAll(range.getComparisons().stream().map(c -> getValue().withComparison(c)).collect(Collectors.toList()));
+            residuals.addAll(range.getComparisons().stream().map(c -> getValue().withComparison(c)).collect(ImmutableList.toImmutableList()));
             dnfParts.add(AndPredicate.and(residuals.build()));
         }
         return OrPredicate.or(dnfParts.build());
+    }
+
+    @Nonnull
+    @Override
+    public Optional<ValueWithRanges> toValueWithRangesMaybe() {
+        return Optional.of(this);
     }
 
     @Override
